<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.babarehner.mysports.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.babarehner.mysports.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.babarehner.mysports.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_my_sports"
        android:name="com.babarehner.mysports.MySportsFragment"
        android:label="@string/my_sports"
        tools:layout="@layout/fragment_my_sports"/>

    <fragment
        android:id="@+id/nav_baseball"
        android:name="com.babarehner.mysports.BaseballFragment"
        android:label="@string/baseball"
        tools:layout="@layout/fragment_baseball"/>

    <fragment
        android:id="@+id/nav_basketball"
        android:name="com.babarehner.mysports.BasketballFragment"
        android:label="@string/basketball"
        tools:layout="@layout/fragment_basketball"/>

    <fragment
        android:id="@+id/nav_football"
        android:name="com.babarehner.mysports.FootballFragment"
        android:label="@string/football"
        tools:layout="@layout/fragment_football"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.babarehner.mysports.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>