<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_baseball"
        android:title="@string/baseball"
        android:icon="@drawable/baseball"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_football"
        android:title="@string/football"
        android:icon="@drawable/football"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_basketball"
        android:title="@string/basketball"
        android:icon="@drawable/basketball"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>